--- a/app/www/style.css
+++ b/app/www/style.css
@@ -16,11 +16,21 @@ body {
     width: 100px;
 }
 
+#game_grid {
+    padding: 1px 0 0 1px;
+    border: 5px solid black;
+    background-color: black;
+}
+
 #game_grid button{
-    width: 20px;
-    height: 20px;
-    padding: 2px;
-    margin: 0;
+    display: block;
+    width: 40px;
+    height: 40px;
+    padding: 0 2px 2px;
+    margin: 0 1px 1px 0;
+    background-color: white;
+    color: black;
+    font-size: 30px;
     text-align: center;
     line-height: 0;
 }
